replaced  jquery with vanilla js

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css" integrity="sha384-1rquJLNOM3ijoueaaeS5m+McXPJCGdr5HcA03/VHXxcp2kX2sUrQDmFc3jR5i/C7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css" integrity="sha384-1rquJLNOM3ijoueaaeS5m+McXPJCGdr5HcA03/VHXxcp2kX2sUrQDmFc3jR5i/C7"
+    crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Krub:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/balloon.css">
@@ -31,21 +33,28 @@
     <h1 class="title"><a href="https://github.com/quickcep/frontend">QUICKCEP</a></h1>
     <h2>Proxy simples e rápido para consulta de CEP</h2>
     <div id="endpoint">
-      <span class="endpoint">GET<input type="text" class="endpoint" value="http://fastcep.appspot.com/v1/<seu-cep-aqui>" readonly></span>
+      <span class="endpoint">GET<input type="text" class="endpoint" value="http://fastcep.appspot.com/v1/<seu-cep-aqui>"
+          readonly></span>
     </div>
   </header>
   <div class="main">
     <section id="section-left">
       <h2>SOBRE</h2>
       <p>
-        <strong>Quickcep</strong> unifica consultas de CEP de diversos serviços em apenas 1 local, o que te permite economizar tempo para realizar suas consultas, utilizando
-        concorrência diponibilizada em <a href="https://golang.org/" target="_blank">Golang</a> para realizar diversas requisições simultaneas em diversos serviços de CEP sendo capaz de selecionar apenas
+        <strong>Quickcep</strong> unifica consultas de CEP de diversos serviços em apenas 1 local, o que te permite
+        economizar tempo para realizar suas consultas, utilizando
+        concorrência diponibilizada em <a href="https://golang.org/" target="_blank">Golang</a> para realizar diversas
+        requisições simultaneas em diversos serviços de CEP sendo capaz de selecionar apenas
         a resposta mais rapida dentro os serviços utilizados.
       </p>
       <p>
-        Existem diversos serviços de consulta de CEP espalhados e cada um possui um corpo de resposta diferente, <strong>Quickcep</strong> consegue <span data-balloon="ViaCEP, Postmon e Republica Virtual" data-balloon-pos="up">consultar estes serviços</span>
-        e retornar uma resposta uniforme independente de qual foi a fonte de consulta, assim você não precisa se preocupar com qual foi o serviço que
-        respondeu e sim com os dados em si, além de ter outros serviços de “backup” caso algum deles falhe, isso significa que você sempre terá uma
+        Existem diversos serviços de consulta de CEP espalhados e cada um possui um corpo de resposta diferente,
+        <strong>Quickcep</strong> consegue <span data-balloon="ViaCEP, Postmon e Republica Virtual" data-balloon-pos="up">consultar
+          estes serviços</span>
+        e retornar uma resposta uniforme independente de qual foi a fonte de consulta, assim você não precisa se
+        preocupar com qual foi o serviço que
+        respondeu e sim com os dados em si, além de ter outros serviços de “backup” caso algum deles falhe, isso
+        significa que você sempre terá uma
         resposta válida o que torna suas consultas “a prova de falhas”.
       </p>
     </section>
@@ -94,7 +103,8 @@
   </footer>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
   <script src="js/vendor//jquery.mask.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
